tests/fixtures/invalid/pow_bool_str_int.py
# Cannot call pow() with Bool, Str, Int
x = pow(True, "hello", 1)
